--- a/src/app/shared/quickview/quickview.component.scss
+++ b/src/app/shared/quickview/quickview.component.scss
@@ -7,6 +7,10 @@
   margin-right: auto;
   margin-left: auto;
 }
+.info-container {
+  max-height: 395px !important;
+}
+
 .preview {
   display: -webkit-box;
   display: -webkit-flex;
