--- a/src/app/shared/quickview/quickview.component.scss
+++ b/src/app/shared/quickview/quickview.component.scss
@@ -4,8 +4,11 @@
   padding-right: 15px;
   margin-top: -45px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  min-width: 1050px;
+
+  .mat-form-field{
+    width: 95%;
+  }
 }
 .info-container {
   max-height: 395px !important;
