fix: 🐛 total changed to totalreviewcount

--- a/src/app/shared/quickview/quickview.component.html
+++ b/src/app/shared/quickview/quickview.component.html
@@ -97,7 +97,7 @@
           </mat-tab>
           <mat-tab label="Review">
             <mat-list>
-              <div mat-subheader>{{Total}} User Reviews</div>
+              <div mat-subheader>{{totalreviewcount}} User Reviews</div>
               <mat-form-field appearance="outline">
                 <mat-label>Write a Review</mat-label>
                 <input
