dynamic loader and language dropdown changed

--- a/src/app/features/admin-management/adminpage/content/content.component.html
+++ b/src/app/features/admin-management/adminpage/content/content.component.html
@@ -76,7 +76,7 @@
       <div class="three-part">
         <mat-card class="showcase-block">
           <div class="display-logo ">
-            <a class="display-text" [routerLink]="['/admin/viewusers']"> Add a Product</a>
+            <a class="display-text" [routerLink]="['/admin/viewusers']"> Add a User</a>
           </div>
           <!-- <div class="showcase-img">
             <a><img class="small-image" src="" alt=""/></a>
