--- a/src/app/shared/list-products/list-products.component.scss
+++ b/src/app/shared/list-products/list-products.component.scss
@@ -2,9 +2,9 @@
   width: 100%;
   padding: 15px 15px 0px 15px;
   .roww {
-    // display: -ms-flexbox;
+    display: -ms-flexbox;
     display: flex;
-    // -ms-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
 
